--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.16
-      - run: sudo apt-get install -y lftp bgpdump tree jq
+      - run: sudo apt-get install -y lftp bgpdump tree jq axel
       - uses: actions/cache@v3
         with:
           key: ${{ runner.os }}-build-dependencies
